# accounting-system

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
accounting_system/: __init__.py  categorization.py  cli.py  models.py  parser.py  reporting.py  storage.py
app/: globals.css  layout.js  page.js
app/api/accounting-ai/: route.js
app/api/health/: route.js
app/api/template/: route.js
app/api/upload-preview/: route.js
app/components/: dashboard-client.js
app/lib/: ledger-preview.js
docs/: upload-template.md
templates/: standard_ledger_upload.csv
tests/: test_accounting_system.py
