[project]
name = "accounting-system"
version = "0.1.0"
description = "Bank statement normalizer and household ledger generator"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["accounting_system*"]
